[gd_scene load_steps=11 format=3 uid="uid://dq5jlxpr7e342"]

[ext_resource type="Script" path="res://main.gd" id="1_c6eq6"]
[ext_resource type="Script" path="res://source/hex_grid_controller.gd" id="1_urc0f"]
[ext_resource type="FontFile" uid="uid://bw5lro6d6v1iw" path="res://font/RobotoCondensed-Bold.ttf" id="2_2i0ms"]
[ext_resource type="FontFile" uid="uid://djv1wikuimen1" path="res://font/RobotoCondensed-Light.ttf" id="3_3wawv"]
[ext_resource type="Texture2D" uid="uid://dsnw6pvodtvwc" path="res://texture/object-rotate-right-svgrepo-com.svg" id="5_ugxw4"]

[sub_resource type="LabelSettings" id="LabelSettings_bnwai"]
font = ExtResource("2_2i0ms")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_vs71d"]
font = ExtResource("3_3wawv")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_t75ok"]
font = ExtResource("3_3wawv")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_tm4x6"]
font = ExtResource("2_2i0ms")
font_size = 120

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n0ec"]
bg_color = Color(0.12549, 0.14902, 0.152941, 0.937255)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6eq6")

[node name="HexGridController" type="Node2D" parent="."]
script = ExtResource("1_urc0f")

[node name="UserHexGridOwner" type="Node2D" parent="HexGridController"]

[node name="TargetHexGridOwner" type="Node2D" parent="HexGridController"]

[node name="HexGridInterface" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -304.0
offset_right = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HexGridInterface"]
layout_mode = 2

[node name="Title" type="Label" parent="HexGridInterface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cubiqle"
label_settings = SubResource("LabelSettings_bnwai")

[node name="Button" type="Button" parent="HexGridInterface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.584314, 0.713726, 0.623529, 1)
theme_override_colors/font_pressed_color = Color(0.583603, 0.714844, 0.622975, 1)
theme_override_colors/font_color = Color(0.407843, 0.564706, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_2i0ms")
theme_override_font_sizes/font_size = 72
text = "?"
flat = true

[node name="TagLine" type="Label" parent="HexGridInterface"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "a shape-rotating game created by figsoft"
label_settings = SubResource("LabelSettings_vs71d")

[node name="MarginContainer" type="MarginContainer" parent="HexGridInterface"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 16

[node name="HBoxContainer2" type="HBoxContainer" parent="HexGridInterface/MarginContainer"]
layout_mode = 2

[node name="RotateCCW" type="TextureButton" parent="HexGridInterface/MarginContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture_normal = ExtResource("5_ugxw4")
texture_pressed = ExtResource("5_ugxw4")
texture_hover = ExtResource("5_ugxw4")
texture_disabled = ExtResource("5_ugxw4")
texture_focused = ExtResource("5_ugxw4")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="RotateCW" type="TextureButton" parent="HexGridInterface/MarginContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("5_ugxw4")
texture_pressed = ExtResource("5_ugxw4")
texture_hover = ExtResource("5_ugxw4")
texture_disabled = ExtResource("5_ugxw4")
texture_focused = ExtResource("5_ugxw4")
ignore_texture_size = true
stretch_mode = 0

[node name="Footer" type="HBoxContainer" parent="HexGridInterface"]
layout_mode = 2
size_flags_vertical = 10

[node name="MovesSection" type="VBoxContainer" parent="HexGridInterface/Footer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="MoveLabel" type="Label" parent="HexGridInterface/Footer/MovesSection"]
layout_mode = 2
text = "Move"
label_settings = SubResource("LabelSettings_t75ok")

[node name="MoveCount" type="Label" parent="HexGridInterface/Footer/MovesSection"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_tm4x6")

[node name="BestMovesSection" type="VBoxContainer" parent="HexGridInterface/Footer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="BestLabel" type="Label" parent="HexGridInterface/Footer/BestMovesSection"]
layout_mode = 2
text = "Best"
label_settings = SubResource("LabelSettings_t75ok")

[node name="BestCount" type="Label" parent="HexGridInterface/Footer/BestMovesSection"]
layout_mode = 2
text = "5"
label_settings = SubResource("LabelSettings_tm4x6")

[node name="TARGET_HEX_GRID_PLACEHOLDER" type="Control" parent="HexGridInterface/Footer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -332.0
offset_top = 98.0
offset_right = 332.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2n0ec")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_3wawv")
theme_override_fonts/bold_font = ExtResource("2_2i0ms")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
fit_content = true
shortcut_keys_enabled = false

[connection signal="pressed" from="HexGridInterface/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HexGridInterface/MarginContainer/HBoxContainer2/RotateCCW" to="HexGridController" method="_on_rotate_ccw_pressed"]
[connection signal="pressed" from="HexGridInterface/MarginContainer/HBoxContainer2/RotateCW" to="HexGridController" method="_on_rotate_cw_pressed"]
